--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -13,4 +13,4 @@
         name: docker
         state: started
     - name: Running container
-      shell: docker run -it -d --name simpleCalculator visshall9/calculator
+      shell: docker create -it  --name simpleCalculator visshall9/calculator
