--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -1,18 +1,10 @@
 ---
 - name: Pull Docker image of Calculator
   hosts: all
-    - name: install python
-      shell: sudo apt install python3
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Pull image
-      docker_image:
-        name: visshall9/calculator:latest
-        source: pull
-    - name: Start docker service
-      service:
-        name: docker
-        state: started
+      shell: docker pull visshall9/calculator:latest
     - name: Running container
-      shell: docker create -it  --name simpleCalculator visshall9/calculator
+      shell: docker run -it -d --name scientific visshall9/calculator
